--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     padding-top: 70px;
     padding-bottom: 70px;
     background: #333;
-    color: white;
+    color: black;
 }
 
 #output {
